# footprint26

./: Findings.html  Findings.md  Footprint26.ipynb  Footprint26_preview.html  LICENSE  README.md  __init__.py  dashboard.html  emission_factors.csv  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_model.py  venues.csv
